--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "discord-api-types": "^0.37.41",
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
     "i18next": "^22.4.15",
