--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,13 +3,14 @@
     "es2021": true,
     "node": true
   },
-  "extends": "eslint:recommended",
-  "overrides": [
-  ],
+  "extends": ["eslint:recommended", "prettier"],
+  "plugins": ["prettier"],
+  "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "rules": {
+    "prettier/prettier": ["error"]
   }
 }
