feat: kodlar toplu olarak düzenlendi
- Kodlardaki uyumsuz discord komutları düzenlendi.
- Hata ve bilgi mesajları eklendi.
- Kodlar daha düzenli hale getirildi.

Co-authored-by: Onur <Onur-Morkoc@users.noreply.github.com>

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "printWidth": 100,
+  "singleQuote": false,
+  "importOrder": ["discord.js", "<THIRD_PARTY_MODULES>", "^#(.*)$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
