--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,14 +3,26 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "prettier"],
-  "plugins": ["prettier"],
+  "plugins": ["import"],
+  "extends": ["airbnb-base", "prettier", "plugin:import/recommended"],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "rules": {
-    "prettier/prettier": ["error"]
+    "import/no-unresolved": "off",
+    "import/extensions": "off",
+    "import/order": 1,
+    "no-restricted-syntax": "off",
+    "no-await-in-loop": "off"
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".mjs", ".jsx", ".ts", ".tsx"]
+      }
+    },
+    "import/extensions": [".js", ".mjs", ".jsx", ".ts", ".tsx"]
   }
 }
