--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#322E0D",
-        "titleBar.activeBackground": "#464113",
-        "titleBar.activeForeground": "#FCFBF2"
-    }
+  "editor.formatOnSave": true
 }
