--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,12 @@
   "useTabs": false,
   "printWidth": 100,
   "singleQuote": false,
-  "importOrder": ["discord.js", "<THIRD_PARTY_MODULES>", "^#(.*)$", "^[./]"],
+  "importOrder": [
+    "discord.js",
+    "<THIRD_PARTY_MODULES>",
+    "^#(.*)$",
+    "^[./]"
+  ],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
 }
