--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "author": "Kodluyoruz",
   "license": "MIT",
   "devDependencies": {
+    "@babel/eslint-parser": "^7.22.15",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "eslint": "^8.50.0",
     "eslint-config-airbnb": "^19.0.4",
